--- a/CSS/organica_style.css
+++ b/CSS/organica_style.css
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6, p {
 	padding-left: 58px;
 }
 .content__text-h2 {
-	color: #fe992a;
+	color: #fe992b;
 	font-weight: 500;
 	font-size: 24px;
 	margin-bottom: 20px;
